syntax = "proto3";

package io.shopping.cart.action;

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "io/shopping/cart/entity/shopping_cart_entity.proto";

option java_outer_classname = "CartToPurchasedProductProto";

service CartToPurchasedProduct {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_ACTION
  };

  rpc OnItemCheckedOut(entity.ItemCheckedOut) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
  }
}
